# OpenGL

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  maincallback.h  preheader.h  shader.h  typedef.h
shader/: LightingShader.fs  PhongShader.fs  PhongShader.vs  Shader.fs
src/: camera.cpp  external_impl.cpp  shader.cpp  typedef.cpp
